; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/nfpcore/extr_nfp6000_pcie.c_nfp_bar_put.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/nfpcore/extr_nfp6000_pcie.c_nfp_bar_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp6000_pcie = type { i32 }
%struct.nfp_bar = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfp6000_pcie*, %struct.nfp_bar*)* @nfp_bar_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfp_bar_put(%struct.nfp6000_pcie* %0, %struct.nfp_bar* %1) #0 {
  %3 = alloca %struct.nfp6000_pcie*, align 8
  %4 = alloca %struct.nfp_bar*, align 8
  store %struct.nfp6000_pcie* %0, %struct.nfp6000_pcie** %3, align 8
  store %struct.nfp_bar* %1, %struct.nfp_bar** %4, align 8
  %5 = load %struct.nfp_bar*, %struct.nfp_bar** %4, align 8
  %6 = getelementptr inbounds %struct.nfp_bar, %struct.nfp_bar* %5, i32 0, i32 0
  %7 = call i64 @atomic_dec_and_test(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.nfp6000_pcie*, %struct.nfp6000_pcie** %3, align 8
  %11 = getelementptr inbounds %struct.nfp6000_pcie, %struct.nfp6000_pcie* %10, i32 0, i32 0
  %12 = call i32 @wake_up_interruptible(i32* %11)
  br label %13

13:                                               ; preds = %9, %2
  ret void
}

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
